# FastAPI_ML_Docker

./: README.md  main.py  model_starter.py  pyproject.toml
